Fixed cookie text overlapping in some languages.

--- a/bkb-dev.less
+++ b/bkb-dev.less
@@ -376,8 +376,17 @@ dd {
     background-color: rgba(0,0,0, 0.75);
     border: 1px solid #333;
     color: white;
-    font-family: @font-swatch1-font-family;
-    font-weight: 600;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    font-family: 'Helevtica', Arial, sans-serif;
+    font-weight: 400;
     bottom: 10px;
     left: 0;
     right: 0;
@@ -390,12 +399,7 @@ dd {
     p {
         color: white;
         padding: 0.5em 1em;
-        @media @tablet {
-            padding: 0.5em 2.5em 0.5em 1em;
-        }
-        @media @mobile {
-            padding-right: 3em;
-        }
+
         a {
             color: #96d3ed;
         }
@@ -404,33 +408,32 @@ dd {
         font-size: 15px;
         line-height: 23px;
     }
+    @media @tablet {
+        text-align: left;
+    }
     @media @mobile {
         border: none;
         border-top: 1px solid #333;
         left: 0;
         bottom: 0;
         margin: 0;
-        text-align: left;
         width: 100%;
     }
     .bk-cookie-close-button {
+        -ms-flex-item-align: start;
+        align-self: flex-start;
         color: rgba(255,255,255, 0.5);
         line-height: 1em;
-        position: absolute;
-        right: 0;
-        top: 0;
         background-color: #000;
         padding: 12px;
+        text-decoration: none;
+        transition: color 0.5s ease;
         @media @tablet {
             font-size: 18px;
-            top: 0;
-            padding: 22px;
             color: white;
         }
         @media only screen and (max-width: 422px) {
             font-size: 16px;
-            top: 12px;
-            right: 14px;
             line-height: 1em;
         }
         &:hover, &:focus {
